swap to .S for context switcher

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "debug.h": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "list.h": "c"
     }
 }
