Can now create multiple threads and have them run in order

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "debug.h": "c",
         "stdbool.h": "c",
-        "list.h": "c"
+        "list.h": "c",
+        "cstdlib": "c"
     }
 }
